--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             ><i class="ri-home-2-line"></i>
             <span class="navbar-link"> Home</span></a
           >
-          <a href="https://github.com/hanhlinux/hanhlinux/wiki"
+          <a href="https://github.com/hanh-linux/wiki"
             ><i class="ri-book-open-fill"></i
             ><span class="navbar-link"> Wiki</span></a
           >
-          <a href="https://github.com/hanhlinux"
+          <a href="https://github.com/hanh-linux"
             ><i class="ri-github-fill"></i>
             <span class="navbar-link"> GitHub</span></a
           >
