--- a/index.html
+++ b/index.html
@@ -65,29 +65,23 @@
       <div class="hanhlinux">
         <h2>What exactly is this?</h2>
         <p>
-          <b>Hanh Linux</b> is an open-source, assessible and reliable operating
-          system. Provide the ability to hand on the most cutting-edge softwares
-          through the power of Arch Linux.
+          <b>Hanh Linux</b> is an independent Linux distribution built by using mussel. It is fast, lightweight, simple and flexible.  
         </p>
         <br /><br />
         <h2>Purpose:</h2>
         <ul>
           <li>
-            <b>Install anything:</b> Hanh Linux just contains the base package,
-            this mean you can install and configure softwares - in any ways you
-            want. No restrictions. Your system, your control!
+            <b>Fast and lightweight:</b> Small amount of pre-installed packages             small system size. We also apply -O3 optimization to all packages               by default
           </li><br><Br>
           <li>
-            <b>Lightweight:</b> System size on disk below 2.25GB and ISO file
-            below 600MB, that's really impressed. But wait, what's more? Thanks
-            to Artix, you can have a life without using a bloated and insecure
-            init daemon by using OpenRC - Gentoo universal init daemon.
+            <b>Simple:</b> Simple packages can do base tasks will be supported.             The packages are written by us should be shell script or C/C++
           </li><br><Br>
           <li>
-            <b>Free:</b> Hanh Linux is completely free. We created it for you,
-            you are the user. You are our focus, not money. Our team do this as
-            our passion. Free is better, right?
-          </li>
+            <b>Flexible:</b> Build packages by your own, your flavor or with                pre-installed profile 
+	  </li><br><Br>
+	  <li>
+	    <b>systemd-less:</b> Hanh Linux uses OpenRC as the init system 
+	  </li><br><Br>
         </ul>
         <br /><br />
         <h2>Want to give it a try?</h2>
@@ -95,7 +89,7 @@
         <div class="container-fluid" style="max-width: 1000px">
           <div style="float: left">
             <p>
-              <b>(OSDN)</b> Current release: <b>Hanh Linux 1.2.1 | 574.77 MB</b>
+              <b>(OSDN)</b> Current release: <b>Hanh Linux 1.3 | 139.00 MB</b>
             </p>
           </div>
           <div style="float: right">
