--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             ><i class="ri-book-open-fill"></i
             ><span class="navbar-link"> Wiki</span></a
           >
-          <a href="https://github.com/hanhlinux"
+          <a href="https://github.com/hanh-linux"
             ><i class="ri-github-fill"></i>
             <span class="navbar-link"> GitHub</span></a
           >
@@ -65,64 +65,38 @@
       <div class="hanhlinux">
         <h2>What exactly is this?</h2>
         <p>
-<<<<<<< HEAD
-          <b>Hanh Linux</b> is an open-source, lightweight and reliable operating system.   It provides you with the ability to hand on the most cutting-edge software updates and patches through the power of Arch Linux, a rolling-release distro.
-=======
-          <b>Hanh Linux</b> is an open-source, assessible and reliable operating
-          system. Provide the ability to hand on the most cutting-edge softwares
-          through the power of Arch Linux.
->>>>>>> main
+          <b>Hanh Linux</b> is an independent, source-based Linux distribution.
+
+          <br><b>Hanh Linux</b> is fast, lightweight, simple and flexible. 
+
         </p>
         <br /><br />
-        <h2>Purpose:</h2>
+        <h2>Goals</h2>
         <ul>
           <li>
-<<<<<<< HEAD
-            <b>Install anything:</b> Hanh Linux contains the base packages with enough software to install, configure and customize your OS in your way. Powered by a large variety range of software from the Arch User Repository, the majority of software and support Linux can be installed on Hanh Linux.
+            <b>Fast and lightweight:</b> All packages are compiled with -O3 and we use implementations of packages that they are lighter and faster than the original. 
           </li><br><Br>
           <li>
-            <b>Lightweight:</b> Without the unnecessary packages, we can ensure that Hanh Linux can work on any computer. The size on disk is below 2.25GB and ISO file size below 300MB (around 120MB in Hanh Linux 2.0), that is impressive, isn't it? But wait, what's more? Apart from that, thanks to Artix, you will have a life without using a bloated and insecure init daemon by using OpenRC - Gentoo universal init daemon.
+            <b>Simple:</b> If anything can be simple, let's just simplify it. Our implementations should be written from shell and C/C++, and we love usable and simple package implementations, too.
           </li><br><Br>
           <li>
-            <b>Free:</b> Hanh Linux is free to use and is open source. You can use it for free, and you can't use it to make money.
-=======
-            <b>Install anything:</b> Hanh Linux just contains the base package,
-            this mean you can install and configure softwares - in any ways you
-            want. No restrictions. Your system, your control!
+            <b>Flexible:</b> Build packages with flavor, build with your modifications.
           </li><br><Br>
           <li>
-            <b>Lightweight:</b> System size on disk below 2.25GB and ISO file
-            below 600MB, that's really impressed. But wait, what's more? Thanks
-            to Artix, you can have a life without using a bloated and insecure
-            init daemon by using OpenRC - Gentoo universal init daemon.
+            <b>systemd-less:</b> We use OpenRC as the init system. Non-systemd, simple. 
           </li><br><Br>
           <li>
-            <b>Free:</b> Hanh Linux is completely free. We created it for you,
-            you are the user. You are our focus, not money. Our team do this as
-            our passion. Free is better, right?
->>>>>>> main
-          </li>
+            <b>POSIX compatible:</b> We want our projects can be easily portable to other operating systems.
+          </li><br><Br>
         </ul>
         <br /><br />
         <h2>Want to give it a try?</h2>
         <br /><br />
         <div class="container-fluid" style="max-width: 1000px">
           <div style="float: left">
-            <p>
-<<<<<<< HEAD
-              <b>(OSDN)</b> Current release: <b>Hanh Linux 2.0 | 114.00 MB</b>
-=======
-              <b>(OSDN)</b> Current release: <b>Hanh Linux 1.2.1 | 574.77 MB</b>
->>>>>>> main
-            </p>
-          </div>
-          <div style="float: right">
-            <a href="https://osdn.net/projects/hanhlinuxiso/">
-              <button type="button" class="btn btn-light button">
-                Download now!
-              </button></a
-            >
-          </div>
+            <a href="https://github.com/hanh-linux/hanh-linux/releases/">GitHub</a>
+            <br>
+            <a href="https://osdn.net/projects/hanhlinuxiso/">OSDN</a>
         </div>
         <br /><br /><br /><br /><br /><br /><br />
       </div>
