--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <br /><br />
         <div class="container-fluid" style="max-width: 1000px">
           <div style="float: left">
-            <a href="https://github.com/hanh-linux/hanh-linux/releases/">GitHub</a>
+            <ul><a href="https://github.com/hanh-linux/hanh-linux/releases/"><li><b>GitHub</b></li></a>
             <br>
-            <a href="https://osdn.net/projects/hanhlinuxiso/">OSDN</a>
+            <a href="https://osdn.net/projects/hanhlinuxiso/"><li><b>OSDN</b></li></a></ul>
         </div>
         <br /><br /><br /><br /><br /><br /><br />
       </div>
