--- a/dark/index.html
+++ b/dark/index.html
@@ -30,7 +30,7 @@
     <header id="header">
       <div class="topnav fixed-top" id="myTopnav">
         <div style="padding-left: 1em">
-          <img src="/assets/img/logo.svg" class="navbar-brand" />
+          <img src="assets/img/logo.svg" class="navbar-brand" />
           <a class="hanh" href="index.html">
             <span class="navbar-link hanh"> <b>Hanh Linux</b></span></a
           >
