--- a/dark/index.html
+++ b/dark/index.html
@@ -114,7 +114,7 @@
           <a href="https://discord.com/invite/ba8weSjQnF"
             ><i class="ri-discord-fill"></i>
           </a>
-          <a href="/dark/index.html"
+          <a href="/index.html"
             ><i class="ri-contrast-2-fill footer-right"></i>
           </a>
         </div>
